Refactor Cloudflare R2 config keys and methods from CFC2 to CFR2; improve cover art API handling and error checks