@@ -1,25 +1,23 @@
 package com.gg.SaltDiscordPlugin;
 
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLConnection;
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
-
-import com.xuncorp.spw.workshop.api.WorkshopApi;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
+import com.xuncorp.spw.workshop.api.PlaybackExtensionPoint;
 import org.jaudiotagger.audio.AudioFile;
 import org.jaudiotagger.audio.AudioFileIO;
 import org.jaudiotagger.audio.AudioHeader;
 import org.jetbrains.annotations.NotNull;
 import org.pf4j.Extension;
 
-import com.google.gson.JsonArray;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonParser;
-import com.xuncorp.spw.workshop.api.PlaybackExtensionPoint;
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.InputStream;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URLConnection;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 
 @Extension
@@ -36,15 +34,15 @@ public class MainPluginExtension implements PlaybackExtensionPoint {
      * 初始化 R2 服务
      */
     private static void initializeR2Service() {
-        if (config.isUseCFC2()) {
-            String accessKey = config.getCFC2AccessKey();
-            String secretKey = config.getCFC2SecretKey();
-            String bucketName = config.getCFC2BucketName();
-            String cfc2Endpoint = config.getCFC2Endpoint();
-            String publicUrl = config.getCFC2PublicUrl();
+        if (config.isUseCFR2()) {
+            String accessKey = config.getCFR2AccessKey();
+            String secretKey = config.getCFR2SecretKey();
+            String bucketName = config.getCFR2BucketName();
+            String cfc2Endpoint = config.getCFR2Endpoint();
+            String publicUrl = config.getCFR2PublicUrl();
 
             if (!accessKey.isEmpty() && !secretKey.isEmpty() &&
-                !bucketName.isEmpty() && !cfc2Endpoint.isEmpty() && !publicUrl.isEmpty()) {
+                    !bucketName.isEmpty() && !cfc2Endpoint.isEmpty() && !publicUrl.isEmpty()) {
                 try {
                     r2Service = new CloudflareR2Service(accessKey, secretKey, bucketName, cfc2Endpoint, publicUrl);
                     System.out.println("Cloudflare R2 服务初始化成功");
@@ -126,16 +124,16 @@ public class MainPluginExtension implements PlaybackExtensionPoint {
         new Thread(() -> {
             String coverUrl = null;
 
-            // 如果启用了 CFC2，优先从文件中提取封面并上传
-            if (config.isUseCFC2() && r2Service != null) {
+            // 如果启用了 CFR2，优先从文件中提取封面并上传
+            if (config.isUseCFR2() && r2Service != null) {
                 coverUrl = extractAndUploadCover(mediaItem.getPath());
             }
 
-            // 如果从文件提取失败或未启用 CFC2，则使用在线获取
+            // 如果从文件提取失败或未启用 CFR2，则使用在线获取
             if (coverUrl == null) {
                 // 尝试网易云接口
                 coverUrl = fetchCoverFromNetEase(mediaItem);
-                
+
                 // 如果网易云接口失败，尝试酷狗接口
                 if (coverUrl == null) {
                     coverUrl = fetchCoverFromKugou(mediaItem);
@@ -167,9 +165,9 @@ public class MainPluginExtension implements PlaybackExtensionPoint {
 
             // 上传到 R2
             String uploadedUrl = r2Service.uploadCoverImage(
-                coverData.getImageData(),
-                coverData.getFileName(),
-                coverData.getMimeType()
+                    coverData.getImageData(),
+                    coverData.getFileName(),
+                    coverData.getMimeType()
             );
 
             if (uploadedUrl != null) {
@@ -192,36 +190,43 @@ public class MainPluginExtension implements PlaybackExtensionPoint {
     private String fetchCoverFromNetEase(MediaItem mediaItem) {
         try {
             // 构建搜索URL
-            String searchQuery = mediaItem.getTitle() + "-" + mediaItem.getArtist();
-            String encodedQuery = URLEncoder.encode(searchQuery, "UTF-8");
+            String searchQuery = mediaItem.getTitle() + "-" + mediaItem.getAlbum();
+            String encodedQuery = URLEncoder.encode(searchQuery, StandardCharsets.UTF_8);
             String searchUrl = "https://music.163.com/api/search/get?type=1&offset=0&limit=1&s=" + encodedQuery;
 
             // 执行搜索请求
             String searchResult = getUrlContent(searchUrl);
             JsonObject searchJson = JsonParser.parseString(searchResult).getAsJsonObject();
 
-            if (searchJson.has("result") && !searchJson.get("result").isJsonNull()) {
-                JsonObject result = searchJson.getAsJsonObject("result");
-                if (result.has("songs") && !result.get("songs").isJsonNull()) {
-                    JsonArray songs = result.getAsJsonArray("songs");
-
-                    if (songs.size() > 0) {
-                        int songId = songs.get(0).getAsJsonObject().get("id").getAsInt();
-
-                        // 获取歌曲详细信息
-                        String songInfoUrl = "https://api.injahow.cn/meting/?type=song&id=" + songId;
-                        String songInfoResult = getUrlContent(songInfoUrl);
-                        JsonArray songInfoArray = JsonParser.parseString(songInfoResult).getAsJsonArray();
-
-                        if (songInfoArray.size() > 0) {
-                            JsonObject songInfo = songInfoArray.get(0).getAsJsonObject();
-                            String coverUrl = songInfo.get("pic").getAsString();
-                            System.out.println("网易云接口获取封面成功: " + coverUrl);
-                            return coverUrl;
-                        }
-                    }
-                }
+            if (!searchJson.has("result") || searchJson.get("result").isJsonNull()) {
+                return null;
             }
+            JsonObject result = searchJson.getAsJsonObject("result");
+
+            if (!result.has("songs") || result.get("songs").isJsonNull()) {
+                return null;
+            }
+            JsonArray songs = result.getAsJsonArray("songs");
+
+            if (songs.isEmpty()) {
+                return null;
+            }
+
+            int songId = songs.get(0).getAsJsonObject().get("id").getAsInt();
+
+            // 获取歌曲详细信息
+            String songInfoUrl = "https://api.injahow.cn/meting/?type=song&id=" + songId;
+            String songInfoResult = getUrlContent(songInfoUrl);
+            JsonArray songInfoArray = JsonParser.parseString(songInfoResult).getAsJsonArray();
+
+            if (songInfoArray.isEmpty()) {
+                return null;
+            }
+
+            JsonObject songInfo = songInfoArray.get(0).getAsJsonObject();
+            String coverUrl = songInfo.get("pic").getAsString();
+            System.out.println("网易云接口获取封面成功: " + coverUrl);
+            return coverUrl;
         } catch (Exception e) {
             System.err.println("网易云接口获取封面失败: " + e.getMessage());
         }
@@ -234,52 +239,63 @@ public class MainPluginExtension implements PlaybackExtensionPoint {
     private String fetchCoverFromKugou(MediaItem mediaItem) {
         try {
             // 构建搜索URL
-            String searchQuery = mediaItem.getTitle() + " " + mediaItem.getArtist();
-            String encodedQuery = URLEncoder.encode(searchQuery, "UTF-8");
+            String searchQuery = mediaItem.getTitle() + "-" + mediaItem.getAlbum();
+            String encodedQuery = URLEncoder.encode(searchQuery, StandardCharsets.UTF_8);
             String searchUrl = "http://ioscdn.kugou.com/api/v3/search/song?page=1&pagesize=1&version=7910&keyword=" + encodedQuery;
 
             // 执行搜索请求
             String searchResult = getUrlContent(searchUrl);
             JsonObject searchJson = JsonParser.parseString(searchResult).getAsJsonObject();
 
-            if (searchJson.has("data") && !searchJson.get("data").isJsonNull()) {
-                JsonObject data = searchJson.getAsJsonObject("data");
-                if (data.has("info") && !data.get("info").isJsonNull()) {
-                    JsonArray info = data.getAsJsonArray("info");
-
-                    if (info.size() > 0) {
-                        JsonObject songInfo = info.get(0).getAsJsonObject();
-                        String albumId = songInfo.get("album_id").getAsString();
-
-                        // 使用album_id获取专辑信息
-                        String albumUrl = "http://mobilecdn.kugou.com/api/v3/album/song?version=9108&plat=0&pagesize=100&area_code=1&page=1&with_res_tag=1&albumid=" + albumId;
-                        String albumResult = getUrlContent(albumUrl);
-                        JsonObject albumJson = JsonParser.parseString(albumResult).getAsJsonObject();
-
-                        if (albumJson.has("data") && !albumJson.get("data").isJsonNull()) {
-                            JsonObject albumData = albumJson.getAsJsonObject("data");
-                            if (albumData.has("info") && !albumData.get("info").isJsonNull()) {
-                                JsonArray albumInfo = albumData.getAsJsonArray("info");
-                                
-                                if (albumInfo.size() > 0) {
-                                    JsonObject album = albumInfo.get(0).getAsJsonObject();
-                                    if (album.has("union_cover") && !album.get("union_cover").isJsonNull()) {
-                                        String unionCover = album.get("union_cover").getAsString();
-                                        
-                                        // 处理union_cover字段
-                                        String coverUrl = unionCover
-                                            .replace("\\", "") 
-                                            .replace("{size}", ""); 
-                                        
-                                        System.out.println("酷狗接口获取封面成功: " + coverUrl);
-                                        return coverUrl;
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
+            if (!searchJson.has("data") || searchJson.get("data").isJsonNull()) {
+                return null;
             }
+
+            JsonObject data = searchJson.getAsJsonObject("data");
+            if (!data.has("info") || data.get("info").isJsonNull()) {
+                return null;
+            }
+            JsonArray info = data.getAsJsonArray("info");
+
+            if (info.isEmpty()) {
+                return null;
+            }
+            JsonObject songInfo = info.get(0).getAsJsonObject();
+            String albumId = songInfo.get("album_id").getAsString();
+
+            // 使用album_id获取专辑信息
+            String albumUrl = "http://mobilecdn.kugou.com/api/v3/album/song?version=9108&plat=0&pagesize=100&area_code=1&page=1&with_res_tag=1&albumid=" + albumId;
+            String albumResult = getUrlContent(albumUrl);
+            JsonObject albumJson = JsonParser.parseString(albumResult).getAsJsonObject();
+
+            if (!albumJson.has("data") || albumJson.get("data").isJsonNull()) {
+                return null;
+            }
+            JsonObject albumData = albumJson.getAsJsonObject("data");
+
+            if (!albumData.has("info") || albumData.get("info").isJsonNull()) {
+                return null;
+            }
+            JsonArray albumInfo = albumData.getAsJsonArray("info");
+
+            if (albumInfo.isEmpty()) {
+                return null;
+            }
+            JsonObject album = albumInfo.get(0).getAsJsonObject();
+
+            if (!album.has("union_cover") || album.get("union_cover").isJsonNull()) {
+                return null;
+            }
+
+            String unionCover = album.get("union_cover").getAsString();
+
+            // 处理union_cover字段
+            String coverUrl = unionCover
+                    .replace("\\", "")
+                    .replace("{size}", "");
+
+            System.out.println("酷狗接口获取封面成功: " + coverUrl);
+            return coverUrl;
         } catch (Exception e) {
             System.err.println("酷狗接口获取封面失败: " + e.getMessage());
         }
@@ -289,7 +305,7 @@ public class MainPluginExtension implements PlaybackExtensionPoint {
     private String getUrlContent(String url) {
         StringBuilder content = new StringBuilder();
         try {
-            URLConnection connection = new URL(url).openConnection();
+            URLConnection connection = new URI(url).toURL().openConnection();
             connection.setRequestProperty("User-Agent", "Mozilla/5.0");
             InputStream inputStream = connection.getInputStream();
             BufferedReader reader = new BufferedReader(new java.io.InputStreamReader(inputStream, StandardCharsets.UTF_8));
